--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "author": "yuhyeonp",
     "license": "MIT",
     "dependencies": {
+        "bootstrap": "^4.5.2",
         "cookie-parser": "^1.4.5",
         "dotenv": "^8.2.0",
         "express": "^4.17.1",
