--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "author": "yuhyeonp",
     "license": "MIT",
     "dependencies": {
+        "bcrypt": "^5.0.0",
         "bootstrap": "^4.5.2",
         "cookie-parser": "^1.4.5",
         "dotenv": "^8.2.0",
@@ -18,6 +19,9 @@
         "multer": "^1.4.2",
         "mysql2": "^2.1.0",
         "nunjucks": "^3.2.2",
+        "passport": "^0.4.1",
+        "passport-kakao": "^1.0.0",
+        "passport-local": "^1.0.0",
         "sequelize": "^6.3.4",
         "sequelize-cli": "^6.2.0"
     },
